--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
     </head>
     
     <body>
-        <div class="container">
-            <div class="text-center">
+        <nav class="navbar navbar-inverse container" style="margin-top: 25px">
+          <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>                        
+                </button>
+              <a class="navbar-brand" href="#">joshua sizer</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="#">home</a></li>
+                  <li><a href="#">about me</a></li>
+                  <li><a href="#">code</a></li>
+                  <li><a href="#">music</a></li>
+                  <li><a href="#">volunteer</a></li>
+                </ul>
+            </div>
+          </div>
+        </nav>
+        
+        <div class="container" >
+            <div class="text-center page-header">
                 <h1 >Hello World</h1>
                 <p>I'm hosted with GitHub Pages.</p>
             </div>
