--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         
         <div class="container" >
             <div class="text-center page-header">
-                <h1 >Hello World</h1>
-                <p>I'm hosted with GitHub Pages.</p>
+                <h1 >home page</h1>
+                <p class="small">I'm hosted with GitHub Pages.</p>
             </div>
 
             <div class="row">
@@ -49,8 +49,8 @@
                         <footer>Joshua Sizer</footer>
                     </blockquote>
                 </div>
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4"></div>
+                <div class="col-sm-4 text-center">empty cell</div>
+                <div class="col-sm-4 text-center">empty cell</div>
             </div>
         </div>
     </body>
