--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     
     <body>
-        <nav class="navbar navbar-inverse container" style="margin-top: 25px">
+        <nav class="navbar navbar-inverse container">
           <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
