Added volunteer page

--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>                        
           </button>
-          <a class="navbar-brand text-uppercase" href="#">Joshua Sizer</a>
+          <a class="navbar-brand text-uppercase" href="index.html">Joshua Sizer</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
@@ -31,7 +31,7 @@
             <li class="text-uppercase"><a href="about-me.html">about me</a></li>
             <li class="active text-uppercase"><a href="code.html">code</a></li>
             <li class="text-uppercase"><a href="music.html">music</a></li>
-            <li class="text-uppercase"><a href="#">volunteer</a></li>
+            <li class="text-uppercase"><a href="volunteer.html">volunteer</a></li>
           </ul>
         </div>
       </div>
