--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="style.css">
 
         <!-- jQuery library -->
@@ -36,7 +37,7 @@
             <li class="text-uppercase"><a href="about-me.html">about me</a></li>
             <li class="text-uppercase"><a href="code.html">code</a></li>
             <li class="text-uppercase"><a href="music.html">music</a></li>
-            <li class="text-uppercase"><a href="#">volunteer</a></li>
+            <li class="text-uppercase"><a href="volunteer.html">volunteer</a></li>
           </ul>
         </div>
       </div>
@@ -83,8 +84,14 @@
     <!-- The bottom, fixed information bar -->
     <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container"> 
-          <p class="navbar-text pull-left">© 2017 - Joshua Sizer</p>
+          <p class="navbar-text pull-left">© 2017 - Joshua Sizer</p>    
+          <a href="#" class="fa fa-twitter pull-right"></a>        
+          <a href="#" class="fa fa-facebook pull-right"></a>
         </div>
+         <!-- Add font awesome icons -->
+        <span>
+            
+        </span>
     </div>
 </body>
 </html>
