--- a/volunteer.html
+++ b/volunteer.html
@@ -28,21 +28,14 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="text-uppercase"><a href="index.html">home</a></li>
-            <li class="active text-uppercase"><a href="about-me.html">about me</a></li>
+            <li class="text-uppercase"><a href="about-me.html">about me</a></li>
             <li class="text-uppercase"><a href="code.html">code</a></li>
             <li class="text-uppercase"><a href="music.html">music</a></li>
-            <li class="text-uppercase"><a href="volunteer.html">volunteer</a></li>
+            <li class="active text-uppercase"><a href="volunteer.html">volunteer</a></li>
           </ul>
         </div>
       </div>
-    </nav> 
-    
-    <div class="container main-body">
-        <div class="text-center page-header">
-            <h1 >Me!</h1>
-            <p>I am Joshua Sizer, currently enrolled in Wissahickon High School</p>
-        </div>
-    </div>
+    </nav>   
     
     <!-- The bottom, fixed information bar -->
     <div class="navbar navbar-default navbar-fixed-bottom">
