--- a/music.html
+++ b/music.html
@@ -31,7 +31,7 @@
             <li class="text-uppercase"><a href="about-me.html">about me</a></li>
             <li class="text-uppercase"><a href="code.html">code</a></li>
             <li class="active text-uppercase"><a href="music.html">music</a></li>
-            <li class="text-uppercase"><a href="#">volunteer</a></li>
+            <li class="text-uppercase"><a href="volunteer.html">volunteer</a></li>
           </ul>
         </div>
       </div>
