--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 Music production and code are alike - and both fuel
                 my desire to create.
             </p>
-            <p class="button"><a href="#">My Music</a></p>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332317379&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+            <p class="button"><a target="_blank" href="https://soundcloud.com/josh-sizer/sets/juntra">My Music</a></p>
         </div>
     </section>
 
