Navbar creation is working well!

--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>        
     <title>Joshua Sizer</title>
 </head>
 <body>
-    
-    <nav class="navbar">
-        <div class="navbar-flex">          
-            <div class="navbar-logo"><a href="#">Joshua Sizer</a></div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#section-code">Code</a></li>
-                <li><a href="#section-music">Music</a></li>
-                <li><a href="#section-robotics">Robotics</a></li>
-                <li><a href="#section-volunteer">Volunteer</a></li>
-            </ul>
-        </div>  
-    </nav>
+ 
+    <div id="nav"></div>
 
     <header class="header-big-picture">
         <h1>Hi, I'm an aspiring developer.</h1>
@@ -90,4 +80,6 @@
         </div>
     </section>
 </body>
+<script src="javascript/navbar.js"></script>    
+
 </html>
