Added a lot of content

--- a/about.html
+++ b/about.html
@@ -12,6 +12,13 @@
 <body>
     <div id="nav">
     </div>
+
+    <div class="page-header">
+        <h2>About Me</h2>
+    </div>
+    <div class="body">
+        <p></p>
+    </div>
 </body>
 
 <script src="javascript/navbar.js"></script>
