--- a/music.html
+++ b/music.html
@@ -12,6 +12,64 @@
 <body>
     <div id="nav">
     </div>
+
+    <div class="page-header">
+        <h2>Music</h2>
+    </div>
+
+    <div class="body">
+        <ul class="music-list">
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/babe" target="_blank">
+                    Babe</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/ever-lasting" target="_blank">
+                    Ever Lasting</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/do-ya-like-huey-lewis-and-the-news" target="_blank">
+                    Do Ya Like Huey Lewis and the News</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/when-the-sun-sheds-tears" target="_blank">
+                    When the Sun Sheds Tears</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/seven-headed-wind" target="_blank">
+                    Seven Headed Wind</a></h2>
+            </li>
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/so-much-sence-to-just-throw-it-all-away" target="_blank">
+                    So Much Sense to Just Throw It All Away</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">
+                    SoonFast</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/fast-to-pass" target="_blank">
+                    Fast to Pass</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/fine-line-between-rude-and-polite" target="_blank">
+                    Fine Line Between Rude and Polite</a></h2>
+            </li>
+
+            <li>
+                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/yellow-daze" target="_blank">
+                    Yellow Daze</a></h2>
+            </li>
+        </ul>
+    </div>
+
 </body>
 
 <script src="javascript/navbar.js"></script>
