--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
     <div id="nav"></div>
 
-    <header class="header-big-picture">
+    <header class="header-big-picture index">
         <h1>Hi, I'm an aspiring developer.</h1>
         <p>You'll learn a little bit about me here.</p>
         <p class="button"><a id="button-scroll" href="#section-code">Read on</a></p>
@@ -34,7 +34,7 @@
                 excite me, and I hope to gain the skill set required
                 for embracing them.
             </p>
-            <p class="button"><a href="#">My Code</a></p>
+            <p class="button"><a href="code.html">My Code</a></p>
         </div>
     </section>
 
@@ -49,7 +49,7 @@
                 my desire to create.
             </p>
             <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332317379&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-            <p class="button"><a target="_blank" href="https://soundcloud.com/josh-sizer/sets/juntra">My Music</a></p>
+            <p class="button"><a href="music.html">My Music</a></p>
         </div>
     </section>
 
@@ -60,7 +60,7 @@
                 robotics team as a freshman, I have been heavily 
                 involved in FRC Robotics Team 341, Miss Daisy.
             </p>
-            <p class="button"><a href="#">Learn More</a></p>
+            <p class="button"><a href="robotics.html">Learn More</a></p>
         </div>
     </section>
 
@@ -76,9 +76,10 @@
                 local Meals on Wheels as a way for community
                 involvment.
             </p>
-            <p class="button"><a href="#">Learn More</a></p>
+            <p class="button"><a href="volunteer.html">Learn More</a></p>
         </div>
     </section>
+    
 </body>
 <script src="javascript/navbar.js"></script>    
 
