Added cool page headers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
     <div id="nav"></div>
 
-    <header class="header-big-picture index">
+    <header class="header-picture index big">
         <h1>Hi, I'm an aspiring developer.</h1>
         <p>You'll learn a little bit about me here.</p>
         <p class="button"><a id="button-scroll" href="#section-code">Read on</a></p>
