--- a/music.html
+++ b/music.html
@@ -13,8 +13,9 @@
     <div id="nav">
     </div>
 
-    <div class="page-header">
-        <h2>Music</h2>
+    <div class="header-picture music small">
+        <h1>Music</h1>
+        <p>A sample of the music I've written.</p>
     </div>
 
     <div class="body">
