--- a/robotics.html
+++ b/robotics.html
@@ -12,6 +12,11 @@
 <body>
     <div id="nav">
     </div>
+
+    <div class="header-picture robotics small">
+        <h1>Robotics</h1>
+        <p>My time as a member of Team 341, Miss Daisy</p>
+    </div>
 </body>
 
 <script src="javascript/navbar.js"></script>
