--- a/volunteer.html
+++ b/volunteer.html
@@ -13,7 +13,7 @@
     <div id="nav">
     </div>
 
-    <header class="header-big-picture volunteer">
+    <header class="header-picture volunteer small">
         <h1>Volunteer Work</h1>
         <p>Helping the world, one human at a time.</p>
         <p class="button"><a id="button-scroll" href="#section-first-global">Read on</a></p>
