--- a/code.html
+++ b/code.html
@@ -12,8 +12,9 @@
 <body>
     <div id="nav">
     </div>
-    <div class="page-header">
-        <h2>Code</h2>
+    <div class="header-picture code small">
+        <h1>Code</h1>
+        <p>A sample of the code I've written.</p>
     </div>
 
     <div class="body">
