Picture heading updats

--- a/code.html
+++ b/code.html
@@ -13,8 +13,7 @@
     <div id="nav">
     </div>
     <div class="header-picture code small">
-        <h1>Code</h1>
-        <p>A sample of the code I've written.</p>
+        <h1>&#60;/Code&#62;</h1>
     </div>
 
     <div class="body">
