--- a/volunteer.html
+++ b/volunteer.html
@@ -14,9 +14,7 @@
     </div>
 
     <header class="header-picture volunteer small">
-        <h1>Volunteer Work</h1>
-        <p>Helping the world, one human at a time.</p>
-        <p class="button"><a id="button-scroll" href="#section-first-global">Read on</a></p>
+        <h1>Volunteer</h1>
     </header>
 
     <section id="section-first-global">
