Added pictures and About content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <p class="button"><a id="button-scroll" href="#section-code">Read on</a></p>
     </header>
 
+    <section id="about">
+        <div class="container">
+            <h2>About</h2>
+            <p> Hi, I'm Joshua Sizer! As a student at Wissahickon High School,
+                I spend my time learning, studying, working, and participating.
+            </p>
+            <p class="button"><a href="about.html">Read More</a></p>
+        </div>
+    </section>
+
     <section id="section-code">
         <div class="container">  
             <h2>Code</h2>
