--- a/volunteer.html
+++ b/volunteer.html
@@ -42,8 +42,8 @@
                 and solve any technical mishaps teams would inevitably experience at competition.
                 Whether helping teams while queueing for matches, or running to a team's pit (area
                 where teams would work on their robot and store tools), each individual interaction, 
-                no matter how small, was humbling and eye opening - everyone on this planet is human,
-                and none of us are so different as to justify discrimination or hate against one another.
+                no matter how small, was humbling and eye opening - everyone on this planet is human 
+                and we are all more similar than we are different.
 
             </p>
         </div>    
@@ -52,6 +52,13 @@
     <section id="section-meals-on-wheels">
         <div class="container">
             <h2>Meals on Wheels</h2>
+            <p> Delivering food to elderly not only keeps them eating healthy, but ensures 
+                they have consistent human interaction each day of the week. As a runner,
+                I had the honor of hand delivering meals. Each interaction was unique and 
+                satisfying. While I wish I could have participated more in this form of volunteer work,
+                the time that I was able to drive and deliver food was truely a great experience.
+
+            </p>
         </div>
     </section>
 </body>
