Some styling and edits

--- a/about.html
+++ b/about.html
@@ -49,11 +49,10 @@
                         I enrolled in our high school's FRC team, <a href="http://www.team341.com/">Team 341 Miss Daisy</a>
                         as soon as I was able. Throughout my years on the team, I have learned and been inspired by STEM.
                         More important than that, Miss Daisy has taught me how to teach, lead, and listen. Apart from STEM,
-                        music plays a large part in my life. You'll rarely catch me without headphones in a five foot radius,
+                        music plays a large part in my life. You'll rarely catch me without headphones within a five foot radius,
                         and playing guitar is my go to stress reliever. Learning and performing other's songs has always been
-                        beneificial to my skill level, but my favorite part of playing guitar is the creative process. I became
+                        beneificial to improving my skill set, but my favorite part of playing guitar is the creative process. I became
                         addicted to recording, mixing, and mastering my own music, and I hope to continue throughout college.
-                        
                     </p>
                 </div>
 
