--- a/volunteer.html
+++ b/volunteer.html
@@ -19,7 +19,7 @@
 
     <section id="section-first-global">
         <div class="container">
-            <h2><a href="http://first.global/">First Global:</a></h2>
+            <h2><a href="http://first.global/">First Global</a></h2>
             <h3>Mentoring</h3>
             <p> FIRST also has its foot in the global community. In conjunction with the
                 state department, FIRST Global was able to host the first ever "Robot Olympics"
@@ -56,7 +56,7 @@
                 they have consistent human interaction each day of the week. As a runner,
                 I had the honor of hand delivering meals. Each interaction was unique and 
                 satisfying. While I wish I could have participated more in this form of volunteer work,
-                the time that I was able to drive and deliver food was truely a great experience.
+                the time that I was able to drive and deliver food was a fantastic experience.
 
             </p>
         </div>
