--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
         <h1>&#60;/Code&#62;</h1>
     </div>
 
-    <div class="body">
+    <div class="container">   
         <ul class="code-list">
             <li>
                 <h2 class="repository-name"><a href="https://github.com/joshsizer/joshsizer.github.io" target="_blank">
@@ -77,15 +77,15 @@
             </li>
 
             <li>
-                    <h2 class="repository-name"><a href="https://github.com/joshsizer/FRC2016-Public" target="_blank">
-                        <code>FRC2016-Public</code></a></h2>
-                    <p class="repository-description">
-                        The code that ran on the 2016 FRC Stronghold robot for Team 341, Miss Daisy. High-lights include
-                        sophisticated algroithms for crossing obstacles and shooting boulders in high goals autonomously.
-                        Look for the robot with 341 painted on red bumpers (bottom right):
-                    </p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ugHK6VKHq9s?rel=0" frameborder="0" allowfullscreen></iframe>
-                </li>
+                <h2 class="repository-name"><a href="https://github.com/joshsizer/FRC2016-Public" target="_blank">
+                    <code>FRC2016-Public</code></a></h2>
+                <p class="repository-description">
+                    The code that ran on the 2016 FRC Stronghold robot for Team 341, Miss Daisy. High-lights include
+                    sophisticated algroithms for crossing obstacles and shooting boulders in high goals autonomously.
+                    Look for the robot with 341 painted on red bumpers (bottom right):
+                </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ugHK6VKHq9s?rel=0" frameborder="0" allowfullscreen></iframe>
+            </li>
         </ul>
     </div>
 </body>
