--- a/music.html
+++ b/music.html
@@ -17,7 +17,7 @@
         <h1>Music</h1>
     </div>
 
-    <div class="body">
+    <div class="container">
         <ul class="music-list">
             <li>
                 <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/babe" target="_blank">
