--- a/music.html
+++ b/music.html
@@ -17,55 +17,64 @@
         <h1>Music</h1>
     </div>
 
+    <!-- All links are turned off in CSS under .music-list a -->
     <div class="container">
         <ul class="music-list">
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/babe" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/babe" target="_blank">
                     Babe</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332316723&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/ever-lasting" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/ever-lasting" target="_blank">
                     Ever Lasting</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332315937&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/do-ya-like-huey-lewis-and-the-news" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/do-ya-like-huey-lewis-and-the-news" target="_blank">
                     Do Ya Like Huey Lewis and the News</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/331754233&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/when-the-sun-sheds-tears" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/when-the-sun-sheds-tears" target="_blank">
                     When the Sun Sheds Tears</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/202842951&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/seven-headed-wind" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/seven-headed-wind" target="_blank">
                     Seven Headed Wind</a></h2>
-            </li>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/202654492&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></li>
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/so-much-sence-to-just-throw-it-all-away" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/so-much-sence-to-just-throw-it-all-away" target="_blank">
                     So Much Sense to Just Throw It All Away</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/202654650&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">
                     SoonFast</a></h2>
-            </li>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332315727&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/fast-to-pass" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/fast-to-pass" target="_blank">
                     Fast to Pass</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332317237&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/fine-line-between-rude-and-polite" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/fine-line-between-rude-and-polite" target="_blank">
                     Fine Line Between Rude and Polite</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332317379&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
 
             <li>
-                <h2 class="music-title"><a href="https://soundcloud.com/josh-sizer/yellow-daze" target="_blank">
+                <h1 class="music-title"><a href="https://soundcloud.com/josh-sizer/yellow-daze" target="_blank">
                     Yellow Daze</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332316352&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
         </ul>
     </div>
