Added footer, new styling, fixed image scaling for about

--- a/code.html
+++ b/code.html
@@ -88,7 +88,8 @@
             </li>
         </ul>
     </div>
+    <div id="footer"></div>
 </body>
-
 <script src="javascript/navbar.js"></script>
+<script src="javascript/footer.js"></script>    
 </html>
