--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header-picture index big">
         <h1>Hi, I'm an aspiring developer.</h1>
         <p>You'll learn a little bit about me here.</p>
-        <p class="button"><a id="button-scroll" href="#section-code">Read on</a></p>
+        <p class="button button-header"><a id="button-scroll" href="#section-code">Read on</a></p>
     </header>
 
     <section id="about">
@@ -88,6 +88,9 @@
         </div>
     </section>
 
+   <div id="footer"></div>
+
 </body>
-<script src="javascript/navbar.js"></script>    
+<script src="javascript/navbar.js"></script>
+<script src="javascript/footer.js"></script>    
 </html>
