--- a/robotics.html
+++ b/robotics.html
@@ -16,7 +16,10 @@
     <div class="header-picture robotics small">
         <h1>Robotics</h1>
     </div>
-</body>
 
+    <div id="footer">
+    </div>  
+</body>
 <script src="javascript/navbar.js"></script>
+<script src="javascript/footer.js"></script>    
 </html>
