--- a/volunteer.html
+++ b/volunteer.html
@@ -19,7 +19,7 @@
 
     <section id="section-first-global">
         <div class="container">
-            <h2><a href="http://first.global/">First Global</a></h2>
+            <h2><a href="http://first.global/">FIRST Global</a></h2>
             <h3>Mentoring</h3>
             <p> FIRST also has its foot in the global community. In conjunction with the
                 state department, FIRST Global was able to host the first ever "Robot Olympics"
@@ -49,19 +49,31 @@
         </div>    
     </section>
 
+    <section id="section-first-robotics">
+            <div class="container">
+                <h2>FIRST Robotics</h2>
+                <p> When not in compeition season, you'll be sure to find Team 341, Miss Daisy
+                    holding demonstrations at local elementary schools, childrens hospitals,
+                    community events, and much more! The primary goal of these events is to expose 
+                    STEM to the youth and inspire them to pursue STEM fields.
+                </p>
+            </div>
+        </section>
+
     <section id="section-meals-on-wheels">
         <div class="container">
             <h2>Meals on Wheels</h2>
             <p> Delivering food to elderly not only keeps them eating healthy, but ensures 
                 they have consistent human interaction each day of the week. As a runner,
-                I had the honor of hand delivering meals. Each interaction was unique and 
-                satisfying. While I wish I could have participated more in this form of volunteer work,
-                the time that I was able to drive and deliver food was a fantastic experience.
+                I had the honor of hand delivering meals, and each interaction was unique
+                and satisfying.
 
             </p>
         </div>
     </section>
+    <div id="footer"></div>
+    
 </body>
-
 <script src="javascript/navbar.js"></script>
+<script src="javascript/footer.js"></script>    
 </html>
