--- a/music.html
+++ b/music.html
@@ -78,8 +78,9 @@
             </li>
         </ul>
     </div>
+    <div id="footer"></div>
 
 </body>
-
 <script src="javascript/navbar.js"></script>
+<script src="javascript/footer.js"></script>    
 </html>
