--- a/about.html
+++ b/about.html
@@ -37,25 +37,30 @@
     </section>
 
     <section id="interests">
-            <div class="container">
-                <h1>Interests</h1>
-                <p> From the time I was a few years old, I would ask for Star Wars lego sets
-                    as birthday gifts. The idea that building blocks could come together
-                    to create something greater than the sum of their parts was exciting
-                    to me. As I progressed through school grades, I was exposed to FLL,
-                    <a href="https://www.firstinspires.org/robotics/fll?__hstc=208832909.fcdbe9cf53d00f66c183541635fa9922.1503343280143.1503343280143.1503343280143.1&__hssc=208832909.2.1503343280143&__hsfp=761709926">FIRST Lego League</a>
-                    and then FRC, <a href="https://www.firstinspires.org/robotics/frc" >FIRST Robotics Competition</a>. 
-                    I enrolled in our high school's FRC team, <a href="http://www.team341.com/">Team 341 Miss Daisy</a>
-                    as soon as I was able. Throughout my years on the team, I have learned and been inspired by STEM.
-                    More important than that, Miss Daisy has taught me how to teach, lead, and listen. Apart from STEM,
-                    music plays a large part in my life. You'll rarely catch me without headphones within a five foot radius,
-                    and playing guitar is my go to stress reliever. Learning and performing other's songs has always been
-                    beneificial to improving my skill set, but my favorite part of playing guitar is the creative process. I became
-                    addicted to recording, mixing, and mastering my own music, and I hope to continue throughout college.
-                </p>
-            </div>
-
+        <div class="container">
+            <h1>Interests</h1>
+            <h2>Technology</h2>
+            <p> From the time I was a few years old, I would ask for Star Wars lego sets
+                as birthday gifts. The idea that building blocks could come together
+                to create something greater than the sum of their parts was exciting
+                to me. As I progressed through school grades, I was exposed to FLL,
+                <a href="https://www.firstinspires.org/robotics/fll?__hstc=208832909.fcdbe9cf53d00f66c183541635fa9922.1503343280143.1503343280143.1503343280143.1&__hssc=208832909.2.1503343280143&__hsfp=761709926">FIRST Lego League</a>
+                and then FRC, <a href="https://www.firstinspires.org/robotics/frc" >FIRST Robotics Competition</a>. 
+                I enrolled in our high school's FRC team, <a href="http://www.team341.com/">Team 341 Miss Daisy</a>
+                as soon as I was able. Throughout my years on the team, I have learned and been inspired by STEM.
+                More important than that, Miss Daisy has taught me how to teach, lead, and listen. </p>
+            <span class="button"><a href="/robotics.html">Robotics</a></span>
+            <span class="button"><a href="/code.html">My Code</a></span>
+            <h2>Music</h2>    
+            <p> Apart from STEM,
+                music plays a large part in my life. You'll rarely catch me without headphones within a five foot radius,
+                and playing guitar is my go to stress reliever. Learning and performing other's songs has always been
+                beneificial to improving my skill set, but my favorite part of playing guitar is the creative process. I became
+                addicted to recording, mixing, and mastering my own music, and I hope to continue throughout college.</p>
+            <p class="button"><a href="/music.html">My Music</a></p>
+        </div>
     </section>
+
     <div id="footer"></div>
 </body>
 <script src="javascript/navbar.js"></script>
