Fixed Rohm and Haas typ0

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                     <p> Hi, I'm Joshua Sizer, a student at Wissahickon High School. I live
                         in the suburbs of Philiadelphia in a town called Ambler. Born in South
                         Africa, I had the opportunity to migrate to the United States when I was 
-                        a few months old. My father, then working at Roman Hass as a software
+                        a few months old. My father, then working at Rohm and Haas as a software
                         developer, has influenced and inspired both my brother's and my own
                         passion for science, technology, and more specifically,
                         computer science.
