--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Joshua Sizer</title>
 </head>
 <body>
-    <div id="nav"></div>
+    <div id="nav">
+        
+    </div>
         
     <header class="header-picture index big">
         <h1>Hi, I'm an aspiring developer.</h1>
@@ -93,4 +95,15 @@
 </body>
 <script src="javascript/navbar.js"></script>
 <script src="javascript/footer.js"></script>    
+<script type="text/javascript">
+function onMenuBurgerClick(x) {
+    x.classList.toggle("change");
+    var dropDownNav = document.getElementById('dropdown-nav')
+    if (dropDownNav.style.display === 'none') {
+        dropDownNav.style.display = 'block';
+    } else {
+        dropDownNav.style.display = 'none';
+    }
+}
+</script>
 </html>
