Added animated scroll effect to home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header-picture index big">
         <h1>Hi, I'm an aspiring developer.</h1>
         <p>You'll learn a little bit about me here.</p>
-        <p class="button button-header"><a id="button-scroll" href="#section-code">Read on</a></p>
+        <p class="button button-header"><a id="button-scroll" href="#about" onclick="scrollToElement('about', (this)); return false;">Read on</a></p>
     </header>
 
     <section id="about">
@@ -94,5 +94,6 @@
 
 </body>
 <script src="javascript/navbar.js"></script>
-<script src="javascript/footer.js"></script>    
+<script src="javascript/footer.js"></script>
+<script src="javascript/smooth-scroll.js"></script>    
 </html>
