--- a/music.html
+++ b/music.html
@@ -27,6 +27,18 @@
             </li>
 
             <li>
+                <h1 class="music-title"><!--<a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">-->
+                    SoonFast</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332315727&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+            </li>
+
+            <li>
+                <h1 class="music-title"><!--<a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">-->
+                    Fall Back</a></h2>
+                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/340633761&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+            </li>
+
+            <li>
                 <h1 class="music-title"><!--<a href="https://soundcloud.com/josh-sizer/ever-lasting" target="_blank">-->
                     Ever Lasting</a></h2>
                     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332315937&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
@@ -53,11 +65,6 @@
                     So Much Sense to Just Throw It All Away</a></h2>
                     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/202654650&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
             </li>
-
-            <li>
-                <h1 class="music-title"><!--<a href="https://soundcloud.com/josh-sizer/soonfast" target="_blank">-->
-                    SoonFast</a></h2>
-                    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/332315727&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></li>
 
             <li>
                 <h1 class="music-title"><!--<a href="https://soundcloud.com/josh-sizer/fast-to-pass" target="_blank">-->
