--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
         <div class="container">  
             <h2>Code</h2>
             <p> First and foremost, I am an aspiring developer. 
-                I have a passion to create functional, elegant 
-                code that does more than just work. Through higher
-                eduction, I hope to learn best practices and guiding
-                principals, as well as build a strong foundation
-                for self learning. With exciting new technologies emerging 
-                each and everyday - tools, frameworks, and even 
+                I have a passion to create functional, elegant code that does more than just work. Through higher
+                education, I hope to learn best practices and guiding principals, as well as build a strong foundation for self-learning. With exciting new technologies emerging 
+                each and every day - tools, frameworks, and even 
                 programming languages - staying on top is 
                 necessary to remain relevant. These new technologies
                 excite me, and I hope to gain the skill set required
@@ -78,13 +75,10 @@
         <div class="container">                        
             <h2>Volunteer Service</h2>
             <p> My time on Miss Daisy involved numerous 
-                demonstrations and outreach events with 
-                the goal of inspiring the youth and exposing
-                them to STEM. In a similar fashion, I helped
-                mentor FIRST Global team Honduras in the first 
+                demonstrations and outreach events with the goal of inspiring the youth and exposing them to STEM. In a similar fashion, I helped mentor FIRST Global team Honduras in the first 
                 ever "Robot Olympics". I also participate in
                 local Meals on Wheels as a way for community
-                involvment.
+                involvement.
             </p>
             <p class="button"><a href="volunteer.html">Learn More</a></p>
         </div>
