--- a/robotics.html
+++ b/robotics.html
@@ -17,6 +17,14 @@
         <h1>Robotics</h1>
     </div>
 
+    <section id="first-robotics">
+        <div class="container">
+            <h2>FIRST Robotics</h2>
+            <p> Throughout my time on <a href="http://team341.com">FIRST Robotics Team 341, Miss Daisy</a>, I have been able to pursue my passion in STEM through programming, mechanical engineering, and photography. Aside from the practical skills attained from this team, I have learned the importance of strong communication and effective leadership. My teammates were more than just people I worked with; they were family. Miss Daisy doesn't just build robots, they build people. 
+            </p>
+        </div>
+    </section>
+
     <div id="footer">
     </div>  
 </body>
