--- a/volunteer.html
+++ b/volunteer.html
@@ -21,28 +21,16 @@
         <div class="container">
             <h2><a href="http://first.global/">FIRST Global</a></h2>
             <h3>Mentoring</h3>
-            <p> FIRST also has its foot in the global community. In conjunction with the
-                state department, FIRST Global was able to host the first ever "Robot Olympics"
-                with over 160 teams attending from over 150 countries. In the months leading up
-                to this epic competition, I helped mentor Team Honduras by Skyping every week
-                and constantly communicating by email. Specifically, I helped to teach the students
-                the art of coding through the use of Google's Blockly programming
-                language. By the end of the competition, Team Honduras students were changing and improving
-                robot functionality through code, all on their own! It was a challenge for everyone involved -
-                Team Honduras students walked hours to school everyday to access
-                materials and an internet connection and, for many of them, this was their first exposure to 
-                aspects of STEM. For the mentors working with Team Honduras from the US, the language
-                barrier and responsibilty of ensuring Team Honduras was field ready by the time 
-                the Olympics came was a difficult, but ultimately a rewarding, experience. 
+            <p> FIRST also has its foot in the global community. In conjunction with the state department, FIRST Global was able to host the first-ever "Robot Olympics" with over 160 teams attending from over 150 countries. In the months leading up to this epic competition, I helped mentor Team Honduras by Skyping every week and constantly communicating by email. Specifically, I helped to teach the students the art of coding through the use of Google's Blockly programming language. By the end of the competition, Team Honduras students were changing and improving robot functionality through code, all on their own! It was a challenge for everyone involved - Team Honduras students walked hours to school every day to access materials and an internet connection and, for many of them, this was their first exposure to aspects of STEM. For the mentors working with Team Honduras from the US, the language barrier and responsibility of ensuring Team Honduras was field ready by the time the Olympics came was a difficult, but ultimately a rewarding, experience.
             </p>
             <h3>Competion Volunteering</h3>
             <p> When the Olympic Games finally rolled around, I made sure to be part of the 
-                staff working to smoothly run the inagural First Global Compeition. 
+                staff working to smoothly run the inaugural First Global Competition. 
                 Due to my technical expertise, I worked with the "Flying Squad" to anticipate 
-                and solve any technical mishaps teams would inevitably experience at competition.
+                and solve any technical mishaps teams would inevitably experience at the competition.
                 Whether helping teams while queueing for matches, or running to a team's pit (area
                 where teams would work on their robot and store tools), each individual interaction, 
-                no matter how small, was humbling and eye opening - everyone on this planet is human 
+                no matter how small, was humbling and eye-opening - everyone on this planet is human 
                 and we are all more similar than we are different.
 
             </p>
@@ -52,8 +40,8 @@
     <section id="section-first-robotics">
             <div class="container">
                 <h2>FIRST Robotics</h2>
-                <p> When not in compeition season, you'll be sure to find Team 341, Miss Daisy
-                    holding demonstrations at local elementary schools, childrens hospitals,
+                <p> When not in competition season, you'll be sure to find Team 341, Miss Daisy
+                    holding demonstrations at local elementary schools, children's hospitals,
                     community events, and much more! The primary goal of these events is to expose 
                     STEM to the youth and inspire them to pursue STEM fields.
                 </p>
