Updated post High School.

--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
                     <code>joshsizer.github.io</code></a></h2>
                 <p class="repository-discription">This is the GitHub Pages repository I push to in order to
                     get this website online. It's completely handwritten with no UI framework to speak of. Just
-                    good ol' HTML, CSS, and JavaScript (plus some javascript libraries).
+                    good ol' HTML, CSS, and JavaScript.
                 </p>
             </li>
 
@@ -42,7 +42,7 @@
                     Miss Daisy. While shining a bright colored LED light at 
                     <a href="img/2012-retroreflective-targets.jpg" target="_blank">FRC game challenge targets framed by retro
                     reflective tape</a>, the application takes video at 30 FPS. These frames are filtered by HSV values,
-                    and then contour fit. Contours are filtered by shape, size, width-height ratio, ect. in order
+                    and then contour fit. Contours are filtered by shape, size, width-height ratio, etc. in order
                     to filter out unwanted detections. (X,Y) pixel coordinates are sent back to the Robot control system
                     over ADB (Android Debug Bridge) through a custom network protocol.
                 </p>
