--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="about">
         <div class="container">
             <h2>About</h2>
-            <p> Hi, I'm Joshua Sizer! As a student at Wissahickon High School,
+            <p> Hi, I'm Joshua Sizer! As a student from Wissahickon High School,
                 I spend my time learning, studying, working, and participating.
             </p>
             <p class="button"><a href="about.html">Read More</a></p>
@@ -34,8 +34,8 @@
         <div class="container">  
             <h2>Code</h2>
             <p> First and foremost, I am an aspiring developer. 
-                I have a passion to create functional, elegant code that does more than just work. Through higher
-                education, I hope to learn best practices and guiding principals, as well as build a strong foundation for self-learning. With exciting new technologies emerging 
+                I have a passion to create functional, elegant code. Through higher
+                education, I hope to learn best practices and guiding principals as well as build a strong foundation for self-learning. With exciting new technologies emerging 
                 each and every day - tools, frameworks, and even 
                 programming languages - staying on top is 
                 necessary to remain relevant. These new technologies
