--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
                 <img class="circle" src="img/prom-head-cropped.jpg" alt="Self-picture">
                 <div class="description">
                     <h1>Background</h1>
-                    <p> Hi, I'm Joshua Sizer, a student at Wissahickon High School. I live
+                    <p> Hi, I'm Joshua Sizer, a student from Wissahickon High School. I live
                         in the suburbs of Philadelphia in a town called Ambler. Born in South
                         Africa, I had the opportunity to migrate to the United States when I was 
                         a few months old. My father, then working at Rohm and Haas as a software
-                        developer, has influenced and inspired both my brother's and my own
-                        passion for science, technology, and more specifically,
+                        developer, has influenced and inspired my
+                        passion for
                         computer science.
                     </p>
                 </div>
@@ -42,11 +42,11 @@
             <h2>Technology</h2>
             <p> From the time I was a few years old, I would ask for Star Wars Lego sets
                 as birthday gifts. The idea that building blocks could come together to create something greater than the sum of their parts was exciting to me. As I progressed through school grades, I was exposed to FLL,
-                <a href="https://www.firstinspires.org/robotics/fll?__hstc=208832909.fcdbe9cf53d00f66c183541635fa9922.1503343280143.1503343280143.1503343280143.1&__hssc=208832909.2.1503343280143&__hsfp=761709926">FIRST Lego League</a>
+                <a href="https://www.firstinspires.org/robotics/fll?__hstc=208832909.fcdbe9cf53d00f66c183541635fa9922.1503343280143.1503343280143.1503343280143.1&__hssc=208832909.2.1503343280143&__hsfp=761709926">FIRST Lego League</a>,
                 and then FRC, <a href="https://www.firstinspires.org/robotics/frc" >FIRST Robotics Competition</a>. 
                 I enrolled in our high school's FRC team, <a href="http://www.team341.com/">Team 341 Miss Daisy</a>
-                as soon as I was able. Throughout my years on the team, I have learned and been inspired by STEM.
-                More important than that, Miss Daisy has taught me how to teach, lead, and listen. </p>
+                as soon as I was able to. Throughout my years on the team, I have learned and been inspired through STEM.
+                More important than that, Miss Daisy has taught me how to teach, lead, and communicate. </p>
             <span class="button"><a href="/robotics.html">Robotics</a></span>
             <span class="button"><a href="/code.html">My Code</a></span>
             <h2>Music</h2>    
