Updated what we do page

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -52,23 +52,55 @@
           <header class="major">
             <h1>What We Do</h1>
           </header>
-          <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-          <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis
-            dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-            Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia
-            malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus,
-            commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh
-            porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in
-            aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.</p>
-          <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris,
-            consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit.
-            Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+          <span class="image main"><img src="images/tania-melnyczuk-3bhydx2rpzI-unsplash.jpg" alt="" /></span>
+          <h4>Our goal here at RPM Consulting of Texas is to give you superior service, knowledge, and help reduce your
+            operating costs.</h6>
+
+            <p>Our clients tell us that apart from the savings they receive, the best thing about working with us is
+              they
+              do not have to worry about the details – monitoring, reporting, or technical issues – because we truly
+              take
+              care of it all for them.</p>
+
+            <h3>We perform a 6-step process:</h3>
+            <ul class="alt">
+              <li></li>
+              <li>
+                <h4>ANALYZE</h4>
+                <p>We analyze your current water and sewer volumes and costs, and then create a plan to move forward.
+                </p>
+              </li>
+              <li>
+                <h4>INSTALL</h4>
+                <p> We install utility grade, smart meters and stand-alone cellular transmitters on cooling towers,
+                  irrigation
+                  systems or condensers.</p>
+              </li>
+              <li>
+                <h4>MONITOR</h4>
+                <p>Using our smart technology, we remotely monitor each site. This also allows us to make sure that each
+                  cooling tower is operating properly. We are able to identify overflows, stuck fill valves, faulty
+                  blow-downs, and alert your operations teams of problems in the field.</p>
+              </li>
+              <li>
+                <h4>REPORT</h4>
+                <p>We manage the reporting of sub-meter readings to your water or sewer utility.
+                </p>
+              </li>
+              <li>
+                <h4>SAVE</h4>
+                <p>You will receive a sewer fee credit that goes back to your businesses’ bottom line. Our monitoring
+                  services
+                  can save water and prevent waste due to mechanical problems.</p>
+              </li>
+              <li>
+                <h4>CONFIRM
+                </h4>
+                <p>We review your water and sewer bills once each year and confirm sewer credits were issued or posted
+                  to your
+                  accounts.</p>
+              </li>
+            </ul>
         </div>
       </section>
 
