Updated about page

--- a/about.html
+++ b/about.html
@@ -53,22 +53,20 @@
             <h1>About</h1>
           </header>
           <span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-          <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis
-            dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-            Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia
-            malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus,
-            commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti
-            sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh
-            porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in
-            aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.</p>
-          <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris,
-            consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit.
-            Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+          <p>Here at RPM Consulting of Texas, we take care of it all for our clients.</p>
+
+          <p>From our initial cost analysis of your water and sewer billing history, we put together a plan that will
+            show you the savings our monitoring and reporting services can deliver for your business. We will furnish
+            and install utility grade smart meters and monitor your sites remotely.</p>
+
+          <p>With daily readings, we will create reports and alerts, and submit your evaporation credit requests to
+            local
+            utilities. </p>
+
+          <p>With annual reports for each site, we ensure that those credits come back to your bottom line.</p>
+
+          <p>Mercedes Trent – Owner / CEO</P>
+          <p> Robert Mabry – Operations Consultant</p>
         </div>
       </section>
 
