Updated faucet picture

--- a/what_we_do.html
+++ b/what_we_do.html
@@ -52,7 +52,7 @@
           <header class="major">
             <h1>What We Do</h1>
           </header>
-          <span class="image main"><img src="images/tania-melnyczuk-3bhydx2rpzI-unsplash.jpg" alt="" /></span>
+          <span class="image main"><img src="images/faucet.png" alt="" /></span>
           <h4>Our goal here at RPM Consulting of Texas is to give you superior service, knowledge, and help reduce your
             operating costs.</h6>
 
